[x] Add styles when NavLink isActive. [ ] Fix bug in infinite scroll:             (After mounting the component and the last element is visible, fetch is not done).

--- a/src/components/CategoriesSection/CategoriesSection.module.css
+++ b/src/components/CategoriesSection/CategoriesSection.module.css
@@ -1,7 +1,7 @@
 @import '../../globalVariables.css';
 
 
-.categories{
+.categories {
     position: absolute;
     width: 100%;
     height: var(--full-view-height);
@@ -11,24 +11,39 @@
     display: none;
 }
 
-.categories__show{
+.categories__show {
     display: block;
 }
 
-.category__items{
+.category__items {
     width: 300px;
     height: 100%;
-    background-color: black; 
+    background-color: black;
     overflow-y: scroll;
 }
 
-.category__textItem{
+.category__item {
+    position: relative;
+}
+
+.category__textItem__isActive::before {
+    content: "";
+    background-color: red;
+    display: block;
+    height: 100%;
+    width: 7px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.category__textItem {
     padding: 10px 20px 10px 20px;
     display: block;
     color: white;
     text-decoration: none;
 }
 
-.category__textItem:hover{
-    background-color: #2b2b2b; 
+.category__textItem:hover {
+    background-color: #2b2b2b;
 }
